--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,11 @@
     box-sizing: border-box;
 }
 
-#margin-container {
+body {
+    font-family: 'Montserrat', sans-serif;;
+}
+
+#container {
     width: 80%;
     margin: 0 auto;
 }
@@ -16,7 +20,7 @@ header {
 }
 
 header > img {
-    width: 260px;
+    width: 280px;
     height: 112px;
     padding-right: 20px;
     border-right: 1px solid lightgrey;
@@ -35,51 +39,97 @@ li a {
     text-decoration: none;
 }
 
-.container {
-    margin: 30px 0;
-    /* debug */
+.position {
+    position: relative;
+}
+
+#hero {
+    width: 100%;
+    object-fit: cover;
+    height: 600px;
+    border-radius: 20px;
+    filter: brightness(0.6);
+    
+}
+
+.opacity {
+    width: 100%;
     height: 600px;
 }
 
-.container::after {
+#img-text {
+    position: absolute;
+    left: 100px;
+    bottom: 80px;
+    width: 40%;
+    color: white;
+}
+
+section div span {
+    font-size: 40px;
+}
+
+.title {
+    margin: 50px 0;
+}
+
+
+/* inizio layout */
+
+.second-box::after {
     content: "";
     display: table;
     clear: both;
 }
 
-.first-box {
-    /* debug */
-    background-color: rgb(214, 214, 168);
-}
-/* inizio layout */
-.second-box {
-    /* debug */
-    background-color: lightblue;
-    height: 1000px;
-}
-
 .pillar {
-    margin: 20% 1%;
     float: left;
-    /* debug */
-    border: 8px solid blue;
-    height: 600px;
-
+    margin-right: 3%;
 }
 
 .sx {
     width: 22%;
 }
 
+.layout-img {
+    object-fit: cover;
+    filter: brightness(0.7);
+    border-radius: 10px;
+    height: 300px;
+}
+
+.img-description {
+    color: grey;
+}
+
 .center {
     width: 50%;
 }
 
+#specialbanner {
+    width: 100%;
+    object-fit: cover;
+    height: 300px;
+    filter: brightness(0.7);
+    border-radius: 10px;
+}
+
 .dx {
     width: 22%;
+    margin: 0;
+}
+
+.special {
+    width: 100%;
 }
 
 footer {
-    background-color: purple;
-    height: 50px;
+    margin-top: 40px;
+    text-align: center;
+    font-size: 20px;
+}
+
+footer > span {
+    font-size: 22px;
+    color: red;
 }
