--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ header > img {
     height: 112px;
     padding-right: 20px;
     border-right: 1px solid lightgrey;
+    
 }
 /* nav */
 ul li {
@@ -43,19 +44,26 @@ li a {
     margin: 20px 0;
 }
 
+.box {
+    height: 600px;
+    border-radius: 20px;
+}
+
+.opacity {
+    background-color: black;
+    border-radius: 10px;
+    width: 100%;
+    background-size: cover;
+}
+
 #hero {
     width: 100%;
     object-fit: cover;
     height: 600px;
     border-radius: 20px;
-    filter: brightness(0.6);
-    
+    opacity: 0.7;
 }
 
-.opacity {
-    width: 100%;
-    height: 600px;
-}
 
 #img-text {
     position: absolute;
@@ -63,7 +71,7 @@ li a {
     bottom: 80px;
     width: 40%;
     color: white;
-}
+} 
 
 section div span {
     font-size: 40px;
@@ -104,7 +112,8 @@ section div span {
 
 .layout-img {
     object-fit: cover;
-    filter: brightness(0.7);
+    width: 100%;
+    opacity: 0.7;
     border-radius: 10px;
     height: 300px;
 }
@@ -117,7 +126,7 @@ section div span {
     width: 100%;
     object-fit: cover;
     height: 300px;
-    filter: brightness(0.7);
+    opacity: 0.7;
     border-radius: 10px;
 }
 
